好友关系的接口基本完善，修改了查询account的接口内容
