# src/model/request/setting.go
@@ -1,0 +1,29 @@
+package request
+
+import (
+	"github.com/0RAJA/chat_app/src/model/common"
+)
+
+type Delete struct {
+	RelationID int64 `json:"relation_id" binding:"required,gte=1"` // 关系ID
+}
+
+type UpdateNickName struct {
+	RelationID int64  `json:"relation_id" binding:"required,gte=1"`      // 关系ID
+	NickName   string `json:"nick_name" binding:"required,gte=1,lte=20"` // 昵称
+}
+
+type UpdateSettingPin struct {
+	RelationID int64 `json:"relation_id" binding:"required,gte=1"` // 关系ID
+	IsPin      *bool `json:"is_pin" binding:"required"`            // 是否pin
+}
+
+type UpdateSettingDisturb struct {
+	RelationID   int64 `json:"relation_id" binding:"required,gte=1"` // 关系ID
+	IsNotDisturb *bool `json:"is_not_disturb" binding:"required"`    // 是否免打扰
+}
+
+type GetFriendSettingsByName struct {
+	Name string `form:"name" binding:"required,gte=1,lte=20"` // 查询名称
+	common.Pager
+}
